--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,11 +8,15 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "description": "Node.js + Express backend for Innovation-Link project.",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
