--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,9 +8,13 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.21.2"
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.4",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
